# mesarcade

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  tox.yml
examples/: boid_flockers.py  game_of_life.py  schelling.py  sugarscape.py  virus_on_network.py
examples/sugarscape/: mesa-arcade-app.py
src/mesa_arcade/: __init__.py  artist.py  button.py  canvas.py  controller.py  figure.py  history_plot.py  plot.py  renderer.py  space_plot.py  styles.py
src/mesarcade/: __init__.py  artist.py  button.py  canvas.py  controller.py  figure.py  history_plot.py  renderer.py  section.py  space_plot.py  utils.py  value_display.py
tests/: test_api.py  test_gui.py
tests/test_gui/: test_default_buttons.py  test_num_controllers.py  test_parameter_input.py
