[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = false
show_error_codes = true
exclude = ["docs"]

[tool.poetry]
name = "mesarcade"
version = "0.1.0"
packages = [{include = "mesarcade", from="src/"}]
description = "Visualize mesa models using python arcade."
authors = [
  "Marius Kaffai",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/mariuzka/mesarcade"
homepage = "https://github.com/mariuzka/mesarcade"
keywords = ["mesa", "agent-based-model", "visualization", "arcade", "simulation", "abm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
arcade = "^3.3.3"
mesa = "^3.4.0"
networkx = ">=3.6"
numpy = ">=2.0.0"
matplotlib = ">= 3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-regressions = ">=2.4.1"
ipython = "^8.7.0"
ipykernel = "^6.17.1"
solara = "*"
altair = "*"
ruff = "^0.14.11"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
ipywidgets = "^8.0.2"
sphinx-rtd-theme = "^1.1.1"
nbsphinx = "^0.9.3"
sphinx-autodoc-typehints = "^1.24.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
fix = true
unsafe-fixes = true
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
target-version = "py312"
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
